# la-lyvanie

./: .gitignore  MAP-OFFICIELLE.md  README.md  THE-VISION-v1.md
.github/: copilot-instructions.md  repository-policy.md
avatars/: archetypes.md  artbook-prompts.md  neuf-formes-humania.md  personnages-secondaires.md
cognition/: architecture-humania.md  architecture-trinite.md  carte-humania-lyvania.md  carte-humania-lyvanie.md  cartographie-therapeutique.md  humania-cognitive-stack-v1.md  lifeos-v2-pipeline.md  mapping-humania-harmonia.md  nirvania-lifeos.md  synthese-strategique.md
dessine-moi/: guide.md
docs/: index.html  kr.html  manifest.json  sw.js
harmonia-demo/: .env.example  README.md  main.py  requirements.txt  start.sh
harmonia-kernel/: .gitignore  CITATION.cff  LICENSE  README.md  demo_protocol.sh  pyproject.toml
harmonia-kernel/examples/inputs/: trip.txt
harmonia-kernel/harmonia/: __init__.py
harmonia-kernel/harmonia/demo/: cli.py
harmonia-kernel/harmonia/pir/: schema.py
harmonia-kernel/harmonia/psmvr/: kernel.py  modeling.py  perception.py  response.py  sensemaking.py  trace.py  verification.py
harmonia-kernel/harmonia/uil/: equivalence.py  schema.py
harmonia-kernel/out_run1/: plan.json  response.json  trace.json  trace_root_hash.txt  uil.json  verification.json
harmonia-kernel/out_run2/: plan.json  trace.json  trace_root_hash.txt  uil.json
harmonia-kernel/tests/: test_trace_chain.py  test_verifier_determinism.py
manifeste/: agi-erreur.md  ami.md  axiomes-harmonia.md  calendrier-interieur.md  canon-du-silence.md  cathedrale.md  (+60 more)
(+260 files in other folders)
