[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonia-kernel"
version = "0.1.0"
description = "Harmonia: a verifiable cognitive kernel (PSMVR) with UIL/PIR, deterministic verifier, and trace replay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[project.scripts]
harmonia-demo = "harmonia.demo.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harmonia*"]
